samples/_failures_safe/1761727730_404181_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a80fb52f.c: In function ‘main’:
./samples/SAFE/__tmp_a80fb52f.c:148:5: error: expected declaration or statement at end of input
  148 |     for (int i = 0; i < entry_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_a80fb52f.c:148:5: error: expected declaration or statement at end of input
